2000-07-29 03:00 UTC+0500 April White <awhite@user.rose.com>

   * doc/en
     * remove UPPER case files, commited, added lower case files, commited

2000-07-29 02:58 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * source/lang/msgko.c
     ! Some fixes (KR -> KO).

   * source/rdd/dbfntx/dbfntx1.c
   * source/rtl/dircmd.prg
   * source/rtl/setkey.c
     * Minor formatting.

   * source/rtl/gtapi.c
     % hb_gtSetPos() now duplicates the code of hb_gtSetPosContext(), instead 
       of calling it, to execute faster.

   * source/rtl/console.c
     - Removed TOFIX from EJECT.

   * include/hbvm.h
     - Removed double declaration for hb_vmQuit()

   * include/hbclass.ch
     * The class syntax disabler macros renamed.

   - tests/teststru.prg
     - Removed.

   * include/hbpp.h
   * source/pp/ppcore.c
     + added prototype for ParsePragma
     ! Some prototypes moved from ppcore to hbpp.h, to keep the externs in
       the headers.
   * source/pp/ppcore.c
     - removed all pragma stuff
   * source/pp/pragma.c
     + new file with all the pragmas related stuff
   * source/pp/Makefile
   * makefile.bc
   * makefile.vc
     Thanks to Jose Lalin.

2000-07-28 14:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     + Added logic to account for HB_SYMBOL_NAME_LEN
     + Added 2 rules to support DECLARE SomeVar as in PRIVATE SomeVar as oppose to Strong Type DECLARE SomeClass SomeVar ...

   + tests/testdecl.prg
     + Added test program to utilize the DECLARE in its different contexts.

2000-07-28 15:00 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * include/hbapigt.h
   * source/rtl/gtapi.c
     * Changed hb_gtSetPos() to hb_gtSetPosContext().
     * Restored hb_gtSetPos() with only two parameters
       for Clipper GT API compatibility (what it does is
       call hb_gtSetPosContext() with the third parameter
       set to HB_GT_SET_POS_BEFORE, which still calls the
       hb_gt_SetPos() function, so that the low-level